This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php


Version 336    ???

--Fixed glitch in VOG mode that left distant players invisible (marked out of
  range) when we jumped to them.




Server Fixes

--You get informed when you target a top leader to kill (instead of an arrow
  pointing toward that leader as a possible exiler).

--Fixed posse size system glitch when posse started with NoWaitWeapon.
  Thanks Wondible.

--Fixed so that there's no victim emote when targetting with NoWaitWeapon
  (snowball, tatoo needle).  Before, emote was getting stuck after dropping
  weapon.

--DING message upon issuing an order now shows you your follower count.

--When pointing you toward closest follower after issuing an order, don't
  consider followers you see as exiled.

--Last heard monument call is passed from mother to baby, but only perpetuated
  one generation (inherited calls are not passed to next generation after
  that).  No more perpetual stale monument calls.

--Support for +causeAutoOrientH, which triggers E/W neighbors to auto-orient,
  but not N/S neighbors.  When an object goes from auto-orienting to not, other
  auto-orienting objects around it now un-react to it.  This allows, for
  example, corner fences to go back to being horizontal when the fence to the
  north or south is removed.  Part of jasonrohrer/OneLifeData7#787

--Fixed case of stale object left in movement record overriding an object that
  changed mid-move (allowing a 3-arrow bear to go back to being a 2-arrow bear
  and attack mid-move, if shot with the third arrow mid-move).  Fixes #608

--Changed movement code so that track carts that pile up against obstacles
  (something beyond the end of a disconnnected track or another cart in the
  way) don't derail, but instead pile up.  Part of jasonrohrer/OneLifeData7#790




Version 336    2020-May-8

--Fixed disappearing adult glitch when an adult carries you far away from your