@@ -488,6 +488,15 @@ disconnectCommand "/DISCONNECT"
 
 familyCommand "/FAM"
 
+leaderCommand "/LEADER"
+followerCommand "/FOLLOWER"
+allyCommand "/ALLY"
+
+
+familyLabel "+FAMILY+"
+leaderLabel "+LEADER+"
+followerLabel "+FOLLOWER+"
+allyLabel "+ALLY+"
 
 
 orderCommand "ORDER,"
@@ -742,7 +751,7 @@ pauseMessage4 "-"
 commandHintsA "CHAT COMMANDS:##~~##/FAM##/DIE##/DISCONNECT##/FPS##/NET##/PING####/HAPPY##/MAD##/ANGRY##/SAD##/DEVIOUS##/JOY##/BLUSH##/HUBBA##/ILL##/YOOHOO##/HMPH##/LOVE##/OREALLY##/SHOCK"
 
 
-commandHintsB "MORE COMMANDS:##~~##I AM [NAME]##YOU ARE [NAME]##CURSE [NAME]##[NAME] OWNS THIS##I'LL KILL [NAME]##I JOIN YOU##I FOLLOW [NAME]##I EXILE [NAME]##I REDEEM [NAME]##ORDER, [TEXT]######NOTE:##~~##[NAME] CAN BE##'YOU' FOR CLOSEST##PERSON, AS IN##'CURSE YOU'"
+commandHintsB "MORE COMMANDS:##~~##/LEADER##/FOLLOWER##/ALLY####I AM [NAME]##YOU ARE [NAME]##CURSE [NAME]##[NAME] OWNS THIS##I'LL KILL [NAME]##I JOIN YOU##I FOLLOW [NAME]##I EXILE [NAME]##I REDEEM [NAME]##ORDER, [TEXT]####NOTE:##~~##[NAME] CAN BE##'YOU' FOR CLOSEST##PERSON, AS IN##'CURSE YOU'"
 
 
 
